--- a/docs/202207/31.md
+++ b/docs/202207/31.md
@@ -1,560 +1,558 @@
 # 220731
-## 検索ワード： SMA
+## 検索ワード： 放送作家
 
-1. ![](https://pbs.twimg.com/profile_images/1497831167223267331/VxaZ8s4U_normal.jpg) Voting Store
+1. ![](https://pbs.twimg.com/profile_images/1483642287955464193/uxMTmUfn_normal.jpg) 映画とコーラと放送作家
 
-@[VStoreTTAandSMA](https://mobile.twitter.com/VStoreTTAandSMA)
+@[eigatocoke](https://mobile.twitter.com/eigatocoke)
 
-18142% (follower:18142 / follow:0) list:26
+29% (follower:4632 / follow:157) list:51
 
-> We sell Idol Champ Chamsims and TTA Coupon. MoP: Dana/Shopeepay/Paypal☺
-DM us for the best deal☺😇
-
----
-2. ![](https://pbs.twimg.com/profile_images/1513693157619376134/dWGc3-8__normal.jpg) SMATh World - REVEAL 🔺 🤖
-
-@[TeamSMATh](https://mobile.twitter.com/TeamSMATh)
-
-3303% (follower:26424 / follow:8) list:7
-
-> 🔺 OS: https://t.co/jo44a4PeAm  🤖 Stand with US🔺
+> 映画とコーラをこよなく愛する、匿名希望のテレビ番組放送作家です。
 
 ---
-3. ![](https://pbs.twimg.com/profile_images/1527262728120938499/-BivaNdH_normal.jpg) PRD_X - REVEAL 🔺🤖
+2. ![](https://pbs.twimg.com/profile_images/1345510299978199040/kPBR69xx_normal.png) 放送作家・村瀬健（バスコ）
 
-@[SMATh_PRD_X](https://mobile.twitter.com/SMATh_PRD_X)
+@[baskobasko](https://mobile.twitter.com/baskobasko)
 
-2948% (follower:23588 / follow:8) list:4
+25% (follower:3025 / follow:118) list:96
 
-> Sigularity reached. A.I cloning initiated. Discord: https://t.co/9ztKdzFPWx 🔺🤖 OS https://t.co/SOPbEEx9Vw
-
----
-4. ![](https://pbs.twimg.com/profile_images/1439447758507626499/Kz5efJcN_normal.jpg) (slow) 📌 COMEBACK PREP
-
-@[ATEEZ_SMA](https://mobile.twitter.com/ATEEZ_SMA)
-
-891% (follower:16053 / follow:18) list:245
-
-> For info on how to help support @ATEEZofficial visit: https://t.co/VWnMcJsLiP | https://t.co/wjbzJC5C0B | https://t.co/3gFcjTLtNy
+> 放送作家／小説／ライター／講演家。第２４回電撃小説大賞受賞。新刊『西由比ヶ浜駅の神様』が発売中！他著書に『最強のコミュニケーション ツッコミ術（祥伝社新書）』『噺家ものがたり』など。笑いの技術を使ったコミュニケーション術の講演を年間150回ほどやってます。ご依頼はbasko@ares.eonet.ne.jpまで下さい！
 
 ---
-5. ![](https://pbs.twimg.com/profile_images/1464107165598490627/VbMmtN3T_normal.jpg) SeoulMusicAwards | GLOBAL
+3. ![](https://pbs.twimg.com/profile_images/1216367414918561794/GKAK40rz_normal.jpg) 土橋ゲンゴロウ 放送作家
 
-@[SMA_global](https://mobile.twitter.com/SMA_global)
+@[dbc903](https://mobile.twitter.com/dbc903)
 
-835% (follower:2507 / follow:3) list:8
+24% (follower:11259 / follow:458) list:22
 
-> Seoul Music Awards GLOBAL Official Twitter
-#서울가요대상
-
----
-6. ![](https://pbs.twimg.com/profile_images/1545833162290462724/11oOV5Yn_normal.jpg) small guy
-
-@[smaIIguy](https://mobile.twitter.com/smaIIguy)
-
-365% (follower:40255 / follow:110) list:24
-
-> come for schlatt, stay for small guy @punkayk
+> 放送作家の端くれ/レぺゼン群馬県館林市/チームカジサック(2018-22)/日テレ『#デジタルにらめっこWARAE』企画/土スペ 千原ジュニアタクシー旅・中山旅・かまいたち旅/アイコン：小山ゆうじろう作「放送作家土橋2020〜Get The Real〜」/お仕事のご依頼はDM📩にてお待ちしております！
 
 ---
-7. ![](https://pbs.twimg.com/profile_images/468822585673658369/qJptUwSe_normal.jpeg) SMA Global Islamic School
+4. ![](https://pbs.twimg.com/profile_images/1249576176332333061/szFoXgX2_normal.jpg) 美濃部達宏🥊🦵放送作家・コンサルタント
 
-@[sma_gis](https://mobile.twitter.com/sma_gis)
+@[minobetatsuhiro](https://mobile.twitter.com/minobetatsuhiro)
 
-232% (follower:6283 / follow:27) list:5
+22% (follower:4573 / follow:207) list:84
 
-> Akun resmi SMA Global Islamic School Condet. Mengembangkan kreativitas siswa dari berbagai aspek. Admin : GIS Cyber Volunteer .Youtube channel: SMA GIS Condet
-
----
-8. ![](https://pbs.twimg.com/profile_images/1439423039427338243/JVL4r3fe_normal.jpg) (slow) ATEEZ_SMA Backup
-
-@[SMA_ATEEZ](https://mobile.twitter.com/SMA_ATEEZ)
-
-219% (follower:3519 / follow:16) list:43
-
-> For info on how to help support @ATEEZofficial visit https://t.co/aTajXokpkP | https://t.co/Stjg8MQbMy | https://t.co/aPE3lqz9lD
+> 作家・脚本家／プロフィール・著書一覧→https://t.co/1PQ2aiLHa5
 
 ---
-9. ![](https://pbs.twimg.com/profile_images/1322165750849744898/SndugEp8_normal.jpg) SMA Office Poll
+5. ![](https://pbs.twimg.com/profile_images/1439861023268237323/PTHlBTUx_normal.jpg) 白武ときお 放送作家 31歳
 
-@[SMAOfficePoll](https://mobile.twitter.com/SMAOfficePoll)
+@[TOKIOCOM](https://mobile.twitter.com/TOKIOCOM)
 
-215% (follower:1721 / follow:8) list:0
+16% (follower:18595 / follow:1155) list:146
 
-> SMA Office Polls - for all your #ShaggedMarriedAnnoyed polls. Created by fans. If you have a poll idea, drop us a DM.
-
-https://t.co/aovAVRuLZ0
+> 🎰#しもふりチューブ 毎日18時投稿 🥩ダウンタウンの #ガキ使 #笑ってはいけない CHOCOLATE Inc.  #ゲラニチョビ #ざっくりYouTube #ララチューン #かが屋の鶴の間 #まードキュ🔻お仕事→tokiocpu@gmail.com
 
 ---
-10. ![](https://pbs.twimg.com/profile_images/1436478253011722243/lM7YkULo_normal.jpg) Sarah S
+6. ![](https://pbs.twimg.com/profile_images/1547392359465635841/UaE4W-AH_normal.jpg) 飯塚〔構成作家の〕
 
-@[Lincoln_CureSMA](https://mobile.twitter.com/Lincoln_CureSMA)
+@[iizukakun](https://mobile.twitter.com/iizukakun)
 
-158% (follower:1896 / follow:12) list:17
+16% (follower:42699 / follow:2542) list:351
 
-> Mom of 4 boys, Army to BTS💜, SMA mom and lover of dogs, pumpkin spice and books!
-
----
-11. ![](https://pbs.twimg.com/profile_images/1460381645228449796/GXXRKCb0_normal.jpg) SMA Michael Grinston
-
-@[16thSMA](https://mobile.twitter.com/16thSMA)
-
-134% (follower:65154 / follow:486) list:164
-
-> Developing engaged leaders who build cohesive teams that are highly trained, disciplined, and mentally/physically fit. 
-
-Military Crisis Chatline in URL below.
+> テレビやラジオの構成作家もしくは放送作家です
 
 ---
-12. ![](https://pbs.twimg.com/profile_images/1538974695910932485/rau0bfX9_normal.jpg) Sma Mbatha Mathibeli
+7. ![](https://pbs.twimg.com/profile_images/1469192684942155776/LmnJws_o_normal.jpg) 石津聡／放送作家
 
-@[Sma_Mbatha](https://mobile.twitter.com/Sma_Mbatha)
+@[ishisato160](https://mobile.twitter.com/ishisato160)
 
-134% (follower:58438 / follow:435) list:122
+13% (follower:2365 / follow:181) list:38
 
-> Group CEO Calvin and Family Group,award wining  producer,Standard Bank Top Women awards 2021 finalist Top Women Young Achiever-Nkunzikay’hlehli
+> 代表作・からくりＴＶ／有吉ＡＫＢ共和国／学校へ行こうなど。
+トニセンロード
+https://spoox.skyperfectv.
 
----
-13. ![](https://pbs.twimg.com/profile_images/1267861531359936518/WZ1hxtDu_normal.jpg) SMA News Today
+ＥＸＩＴ兼近ポポポエム
+https://t.co/NfKci7Bk37
 
-@[SMANewsToday](https://mobile.twitter.com/SMANewsToday)
-
-131% (follower:1448 / follow:11) list:5
-
-> We exist to bring you science, research and clinical news about SMA. We are a free digital publication dedicated to the patient community.
-
----
-14. ![](https://pbs.twimg.com/profile_images/1814964231/sma_logo_normal.jpg) SMA Solar Technology
-
-@[SMAsolar](https://mobile.twitter.com/SMAsolar)
-
-116% (follower:19712 / follow:169) list:368
-
-> Welcome to the official SMA twitter page. Carolyn (^cs),  Leonie (^lb) and Susanne (^sh) tweet about SMA, PV and the energy transition. Mo-Fr 9-17h
+三遊亭鬼丸voicy
+https://t.co/W85hJyT5L9
 
 ---
-15. ![](https://pbs.twimg.com/profile_images/1204876581317029889/GHVllB_L_normal.jpg) Daniel A. Dailey
+8. ![](https://pbs.twimg.com/profile_images/1520636004734218241/L3Ku6VLI_normal.jpg) 堤映月 放送作家
 
-@[15thSMA](https://mobile.twitter.com/15thSMA)
+@[otsukisankirari](https://mobile.twitter.com/otsukisankirari)
 
-91% (follower:20650 / follow:226) list:117
+12% (follower:2843 / follow:228) list:35
 
-> 15th Sergeant Major of the Army, U.S. Army Retired
-
----
-16. ![](https://pbs.twimg.com/profile_images/903854997951193089/2VJFqGW-_normal.jpg) Seyed Mohammad Ali Hosseini
-
-@[HossainiSma](https://mobile.twitter.com/HossainiSma)
-
-84% (follower:4576 / follow:54) list:35
-
-> Ambassador of I.R. #Iran🇮🇷 to #Pakistan🇵🇰
-Ex-Deputy FM on  #International_Affairs
-Ex- Spokesman of Ministry of #Foreign_Affairs
+> 放送作家(24)🌝 担当✏︎Netflix Japan 公式ch / ViVi channel 【TV】ヒルナンデス！/Mステ/あざとくて何が悪いの？/アピールちゃん / あしたの内村‼︎【ラジオ】山崎怜奈のダレハナ　https://t.co/SbUp3RcVjH
 
 ---
-17. ![](https://pbs.twimg.com/profile_images/1049069858233765889/h0hsRByQ_normal.jpg) Austin
+9. ![](https://pbs.twimg.com/profile_images/881803983471337472/6opavAla_normal.jpg) 日本放送作家協会
 
-@[TSMSmaK](https://mobile.twitter.com/TSMSmaK)
+@[hosakkyo](https://mobile.twitter.com/hosakkyo)
 
-51% (follower:22851 / follow:447) list:85
+12% (follower:2391 / follow:184) list:36
 
-> @TSM contact: smak@tsm.gg
-
----
-18. ![](https://pbs.twimg.com/profile_images/717245993964601344/P1G-ilX4_normal.jpg) SMA N 1 PEKALONGAN
-
-@[SMA1PEKALONGAN](https://mobile.twitter.com/SMA1PEKALONGAN)
-
-40% (follower:3226 / follow:79) list:6
-
-> Twitter Resmi SMA 1 Pekalongan | Jl. R A Kartini 39 Pekalongan 51128 Telp. (0285) 421190
+> 日本放送作家協会 公式アカウント。 入会希望の放送作家・脚本家の方はお気軽にお問合せください。協会員のアカウントはフォローさせていただき、リツートすることがあります。 NHKと共催で毎年、創作ドラマ大賞（ラジオ・テレビ）を実施。 https://t.co/lz4Z3zEeqR
 
 ---
-19. ![](https://pbs.twimg.com/profile_images/1478604489141768192/bdMPlj3d_normal.jpg) Landa
+10. ![](https://pbs.twimg.com/profile_images/1247873284/tantantanuki02_normal.jpg) 松本真一
 
-@[Landa_sma](https://mobile.twitter.com/Landa_sma)
+@[matsushin_0815](https://mobile.twitter.com/matsushin_0815)
 
-29% (follower:46737 / follow:1573) list:13
+10% (follower:4128 / follow:395) list:231
 
-> God
-
----
-20. ![](https://pbs.twimg.com/profile_images/923699105821425664/YLy78hBs_normal.jpg) Jon Dulin
-
-@[MoneySma](https://mobile.twitter.com/MoneySma)
-
-26% (follower:12027 / follow:462) list:274
-
-> I help people gain control of their money by paying off debt and start building wealth so they can achieve their dreams. https://t.co/TpdHKADbC9 #influencer
+> 構成作家（テレビやラジオや舞台のお手伝い）をしております。
 
 ---
-21. ![](https://pbs.twimg.com/profile_images/1112988567578570753/WW8-qtoA_normal.png) SILENT MANGA AUDITION® 🏁SMA18 Deadline Aug. 1st🏁
+11. ![](https://pbs.twimg.com/profile_images/458956113887522817/N11PXlCZ_normal.png) 三田卓人＠放送作家
 
-@[SilentMangaComm](https://mobile.twitter.com/SilentMangaComm)
+@[mitakuto](https://mobile.twitter.com/mitakuto)
 
-22% (follower:7144 / follow:316) list:45
+9% (follower:2056 / follow:214) list:48
 
-> The biggest manga audition that could launch your Japanese career! 🏆 SMA18 Moments of HAPPINESS😀, AFFECTION🥰, or TEARS😭 https://t.co/zmGFTiVQDv
-
----
-22. ![](https://pbs.twimg.com/profile_images/1024415360215207936/tkht2KAC_normal.jpg) SMA America, LLC
-
-@[SMA_America](https://mobile.twitter.com/SMA_America)
-
-19% (follower:5096 / follow:259) list:54
-
-> Welcome to the official SMA America Twitter page, where we tweet about SMA, PV & renewable energy. Mon - Fri 8-5 PST
+> 構成📺｢有吉ゼミ｣｢ヒルナンデス｣｢新乃木坂スター誕生｣｢エンタの神様｣｢OCHANORMAお茶の間さまの言うとおり｣｢中山優馬×ジャニーズJr.ｱｯﾄYUMAHOUSE｣｢Appare!いったれテレビ｣📻｢大竹まことゴールデンラジオ｣｢いとうあさこラジオのあさこ｣｢らじらー! サンデー｣🎬脚本｢サウナの神様｣
 
 ---
-23. ![](https://pbs.twimg.com/profile_images/579837443014197248/6DmAM3-S_normal.jpg) Biseks SMA Tangerang
+12. ![](https://pbs.twimg.com/profile_images/1543341566567202817/-gUYSjQH_normal.jpg) 長谷川良品 | 放送作家
 
-@[KaumPelangi](https://mobile.twitter.com/KaumPelangi)
+@[ryohin_jp](https://mobile.twitter.com/ryohin_jp)
 
-17% (follower:3253 / follow:187) list:1
+9% (follower:12879 / follow:1323) list:114
 
-> Bronis (Brondong Manis), Tangerang. Chineese.
-
-disini para kumpulnya Biseks pelajar brondong SMA/SMK/SMP Tangerang.
-
-#MasihSingle
+> 企画屋 | 放送作家(長谷川大雲) | 毎日をユーモラスにのんびり過ごしています | 企業動画制作しています | ポートフォリオご覧になりたい方はDMください
 
 ---
-24. ![](https://pbs.twimg.com/profile_images/1203359879605444608/fTo-0FDs_normal.jpg) Sh**ged. Married. Annoyed [Fan Page]
+13. ![](https://pbs.twimg.com/profile_images/1277258514587463680/VJehNqKd_normal.jpg) 放送作家オオタケ
 
-@[TheSMAFans](https://mobile.twitter.com/TheSMAFans)
+@[otake321](https://mobile.twitter.com/otake321)
 
-12% (follower:3097 / follow:250) list:0
+9% (follower:1622 / follow:179) list:15
 
-> Created for the fans of Shagged Married Annoyed to provide updates and discussions on everything SMA related 🍷 #ShaggedMarriedAnnoyed #SMAs
-
----
-25. ![](https://pbs.twimg.com/profile_images/1220904853/41788_115590478490188_6392_n_normal.jpg) SMA 1 GORONTALO
-
-@[SMANSA_GTLO](https://mobile.twitter.com/SMANSA_GTLO)
-
-10% (follower:2233 / follow:208) list:1
-
-> Account Twitter Resmi SMA Negeri 1 Gorontalo
+> 東京 過去の担当番組はコチラ → https://t.co/MikmiNVlYy 放送作家の作るアパレル・COMPLIANCE IS DEAD →https://t.co/fsxBoWaGhS    お仕事の依頼はDMで📩
 
 ---
-26. ![](https://pbs.twimg.com/profile_images/1220820369482964998/N_QzlZyy_normal.png) Cure SMA
+14. ![](https://pbs.twimg.com/profile_images/1216572726271340544/NH-jjZV__normal.jpg) 工藤莞太 放送作家
 
-@[CureSMA](https://mobile.twitter.com/CureSMA)
+@[kanta_giants](https://mobile.twitter.com/kanta_giants)
 
-8% (follower:5341 / follow:613) list:85
+8% (follower:1989 / follow:240) list:15
 
-> Funding groundbreaking research for SMA. Determined to find a cure & support our community as the future of SMA is ever-changing.
-
----
-27. ![](https://pbs.twimg.com/profile_images/942644754361106432/p9fgCMGM_normal.jpg) Sports Medicine Australia
-
-@[SMA_News](https://mobile.twitter.com/SMA_News)
-
-7% (follower:9554 / follow:1300) list:103
-
-> Sports Medicine Australia is a NFP committed to encouraging all Australians to participate in physical activity, safely. #SMAEVENTS #SMANEWS
+> 放送作家 主にTVとYouTubeで企画構成をしてます 過去の仕事は下のリンクから    【お仕事のご相談はDMください】
+競馬/巨人/プレミアリーグ/ラリーガ
 
 ---
-28. ![](https://pbs.twimg.com/profile_images/523459503711199232/3phSho_0_normal.jpeg) Sport Marketing Association
+15. ![](https://pbs.twimg.com/profile_images/533814333843591168/Ra8SFqas_normal.jpeg) 安達元一（放送作家）
 
-@[SMA_National](https://mobile.twitter.com/SMA_National)
+@[motoichiadachi](https://mobile.twitter.com/motoichiadachi)
 
-6% (follower:2970 / follow:438) list:53
+7% (follower:6109 / follow:799) list:272
 
-> Official Twitter account of the Sport Marketing Association presented by @SBRnet. Annual conference October 20-22, 2022 in Charlotte, NC. #SMACharlotte #SMA2022
-
----
-29. ![](https://pbs.twimg.com/profile_images/1022125195589500929/aX29rNRU_normal.jpg) The SMA.
-
-@[SportsMassUK](https://mobile.twitter.com/SportsMassUK)
-
-6% (follower:3119 / follow:506) list:22
-
-> We represent and promote the best Soft Tissue Therapists in the UK. The Professional Association for Soft Tissue Therapists.
+> 放送作家。視聴率200％男。さんま御殿、アンビリバボー、スマスマ、おかげでした、など。小説「LOVEGAME」「痛妻」「ワタシ怖いくらい前向きです」など多数。42回ギャラクシー賞大賞、国連平和映画祭2007特別賞など受賞。【超アイデア発想メソッド】無料プレゼント中！→　http://t.co/LkZQoGjX2x
 
 ---
-30. ![](https://pbs.twimg.com/profile_images/1398817751657967621/63ESuYyJ_normal.jpg) SMA16 Wiremu Moffitt, DSD
+16. ![](https://pbs.twimg.com/profile_images/1276786897931530242/dIuI3t2e_normal.jpg) 髙田亮太（放送作家）
 
-@[SMA_NZ](https://mobile.twitter.com/SMA_NZ)
+@[RyotaTakada](https://mobile.twitter.com/RyotaTakada)
 
-5% (follower:1385 / follow:277) list:22
+7% (follower:1630 / follow:215) list:33
 
-> WO1 Wiremu Moffitt is the Sergeant Major of the NZ Army. The SMA is the senior soldier in the Chief of Army's leadership team https://t.co/R4GYqGFVKg
-
----
-31. ![](https://pbs.twimg.com/profile_images/1426200881658224640/FWZMsWDt_normal.jpg) Sask Medical Assoc.
-
-@[SMA_docs](https://mobile.twitter.com/SMA_docs)
-
-5% (follower:5950 / follow:1093) list:74
-
-> The Saskatchewan Medical Association is the voice of Saskatchewan's doctors. Our members are the physicians, residents and medical students of the province.
+> 放送作家・映像ディレクター 担当番組SCHOOL OF LOCK! ではダンガリー先生と呼ばれてます。アイナLOCKS! / 小芝風花のGIRLS LOCKS! / 板野友美のうた女 / BiSH LOCKS! / リトグリLOCKS! / GReeeeN LOCKS! / うむラジ / ドライ部（YouTube）
 
 ---
-32. ![](https://pbs.twimg.com/profile_images/421592288523870208/br6EbSF8_normal.jpeg) SMA SEMEN PADANG
+17. ![](https://pbs.twimg.com/profile_images/1392383284894519305/R5YUwho7_normal.jpg) 島津秀泰（放送作家）｜Planet of Food 出演者＆スポンサー募集中｜食の異文化交流
 
-@[SMA_SEMENPADANG](https://mobile.twitter.com/SMA_SEMENPADANG)
+@[shimazujaoriya](https://mobile.twitter.com/shimazujaoriya)
 
-5% (follower:1588 / follow:287) list:1
+6% (follower:1432 / follow:221) list:29
 
-> Official Account of SMA SEMEN PADANG
-
----
-33. ![](https://pbs.twimg.com/profile_images/852537797663744000/Qcq08GY5_normal.jpg) Kenneth Preston
-
-@[SMAPrestonAUSA](https://mobile.twitter.com/SMAPrestonAUSA)
-
-5% (follower:527 / follow:88) list:0
-
-> Sergeant Major of the Army (Retired) Ken Preston serves as the Vice President for NCO and Soldier Programs at the Association of the United States Army @AUSAorg
+> 放送作家（経歴：がっちりマンデー、未来世紀ジパング、給与明細など担当）お仕事の依頼、その他お願いはDMまで。YOUTUBE：「Planet of Food」配信中。 水道橋博士の「阿佐ヶ谷ヤング洋品店」担当 ■花景家「阿部喜恵」プロデュース ■乙村式ニンニク大使
 
 ---
-34. ![](https://pbs.twimg.com/profile_images/1447960144785051658/1mgutM6U_normal.jpg) SMA
+18. ![](https://pbs.twimg.com/profile_images/1338120600582115329/LAzZ3H_l_normal.jpg) エモペイ(放送作家)
 
-@[SocMusArch](https://mobile.twitter.com/SocMusArch)
+@[emopei](https://mobile.twitter.com/emopei)
 
-4% (follower:1970 / follow:409) list:55
+6% (follower:3000 / follow:437) list:26
 
-> The Society for Museum Archaeology promotes the interest of archaeology in museums and offers support to everyone working with archaeological collections.
-
----
-35. ![](https://pbs.twimg.com/profile_images/1550956859879612416/UkE8NeSx_normal.jpg) Vanessa
-
-@[sma11_huddy](https://mobile.twitter.com/sma11_huddy)
-
-4% (follower:397 / follow:80) list:5
-
-> idk
+> 東京都清瀬市出身【TV】音が出たら負け/PIKOON!/Let's!美バディ/マヂカルクリエイターズ/恋のお世話始めました/くりぃむナンタラ/オオカミ少年/所JAPAN/夫だってツライよ！！/コソコソプラネット/突然！ぶっとびオファー/など
 
 ---
-36. ![](https://pbs.twimg.com/profile_images/1549847638899494913/j7AqeM1j_normal.png) DigitalMisfits.eth l SMATh🔺🤖
+19. ![](https://pbs.twimg.com/profile_images/1466245087583965184/sp1zVLhk_normal.jpg) 深見 シンジ【放送作家】
 
-@[DigitalxMisfits](https://mobile.twitter.com/DigitalxMisfits)
+@[TbP3oyyi575](https://mobile.twitter.com/TbP3oyyi575)
 
-3% (follower:14457 / follow:4511) list:60
+5% (follower:5401 / follow:1022) list:39
 
-> I don't buy high and sell low, I buy tops and sell bottoms. True Liquidity Provider 🫡 @TeamSMATh #WeBuildDifferent #MisfitsDAO
-
----
-37. ![](https://pbs.twimg.com/profile_images/905087091910082561/xVoGDyuS_normal.jpg) ACT for SMA
-
-@[ACTforSMA](https://mobile.twitter.com/ACTforSMA)
-
-3% (follower:3931 / follow:1024) list:59
-
-> Raising awareness of Spinal Muscular Atrophy and funds to help those suffering from SMA Type 1 which is the leading genetic killer of under 2's
+> 25歳放送作家 四千頭身のYonTube/ #マリマリマリー 企画脚本/土佐兄弟の『ネタ兄弟』/ハナコのミドダバ/ウケメン/Do8/教えて四千頭身/ロッチ単独ライブ/#culturez /2分59秒/YouTube・tiktok企画出し・構成などのお仕事DMでも承り
 
 ---
-38. ![](https://pbs.twimg.com/profile_images/1498280370982248448/oopxBx20_normal.png) SMA-Europe
+20. ![](https://pbs.twimg.com/profile_images/1129032580169388033/XzfRXn8G_normal.jpg) 松本 勇平
 
-@[SMAEurope](https://mobile.twitter.com/SMAEurope)
+@[u_hey_matsu](https://mobile.twitter.com/u_hey_matsu)
 
-3% (follower:1312 / follow:388) list:13
+5% (follower:3531 / follow:662) list:178
 
-> We are a pan-European umbrella organisation of spinal muscular atrophy (SMA) organisations, founded to create a better world for all those living with SMA.
-
----
-39. ![](https://pbs.twimg.com/profile_images/1432973150225055749/2aSd-Xh6_normal.jpg) Spinal Muscular Atrophy UK
-
-@[SMA_UK_](https://mobile.twitter.com/SMA_UK_)
-
-3% (follower:2663 / follow:862) list:39
-
-> Supporting anyone living in the UK affected by Spinal Muscular Atrophy (SMA). On Twitter to raise awareness of the condition, our activity and related topics
+> 放送作家。肩にインコ🦜ひざに犬🐶腕に娘👶ベルトにお腹🐷がのっています。グリーンにゴルフボールはなかなかのらず⛳️
 
 ---
-40. ![](https://pbs.twimg.com/profile_images/688870782739415040/vDUSR3Bv_normal.jpg) SMA Australia
+21. ![](https://pbs.twimg.com/profile_images/1034147270600486912/gl7-kHRe_normal.jpg) りん / 放送作家 👾👾
 
-@[SMA_Australia](https://mobile.twitter.com/SMA_Australia)
+@[fukudarin](https://mobile.twitter.com/fukudarin)
 
-3% (follower:1146 / follow:306) list:22
+5% (follower:1123 / follow:209) list:14
 
-> Welcome to the official SMA Australia Twitter page. Our team tweet about SMA, PV and renewable energy. Mon - Fri 9-5
-
----
-41. ![](https://pbs.twimg.com/profile_images/1349009737329815556/4y5jqUZD_normal.png) SMA Insurance
-
-@[SMAInsurance](https://mobile.twitter.com/SMAInsurance)
-
-3% (follower:2484 / follow:755) list:176
-
-> SMA is a strategic advisory firm serving the insurance industry, providing business & technology insights, research, and advice to insurers and IT providers.
+> 放送作家、ライターなど… 。都内在住・賃貸2LDK・娘11歳 #放送作家の娘 ・仕事と家事のくり返し。#夜ごはん報告 の詳細https://t.co/tI3IIkcre2【放送作家りんのブログ】↓↓↓
 
 ---
-42. ![](https://pbs.twimg.com/profile_images/1498309867240628233/eIuKGVpG_normal.jpg) MGen Zimmer, Acting ADM(DIA)/SMA(DIA) par intérim
+22. ![](https://pbs.twimg.com/profile_images/1372429653344886784/LkHxo4bU_normal.jpg) 松本建一／放送作家
 
-@[DIADND_DIAMDN](https://mobile.twitter.com/DIADND_DIAMDN)
+@[mtmtknic_ia](https://mobile.twitter.com/mtmtknic_ia)
 
-3% (follower:350 / follow:106) list:5
+5% (follower:1259 / follow:211) list:9
 
-> ADM for Data, Innovation, Analytics for @NationalDefence and @CanadianForces / SMA des Données, Innovation, Analytiques pour le @DefenseCanada et @ForcesCanada
-
----
-43. ![](https://pbs.twimg.com/profile_images/1073290413669265409/km0_-ztS_normal.jpg) SMA
-
-@[SMA_CT](https://mobile.twitter.com/SMA_CT)
-
-2% (follower:417 / follow:204) list:13
-
-> Smaller Manufacturers Association of CT (SMA) represents the interests of manufacturing in CT. The SMA currently represents just under 200 member companies.
+> 放送作家｜ それって!?実際どうなの課 etc｜OTONANOYUME｜ 歌舞伎町Sparkle
 
 ---
-44. ![](https://pbs.twimg.com/profile_images/1338614064885460996/eNCuzEn0_normal.jpg) Marc Hendry
+23. ![](https://pbs.twimg.com/profile_images/1392863802123718661/IrxGIlB7_normal.jpg) 川野将一　テレビの放送作家でラジオのヘビーリスナー
 
-@[Marc_SMA](https://mobile.twitter.com/Marc_SMA)
+@[kawano_mk](https://mobile.twitter.com/kawano_mk)
 
-2% (follower:2093 / follow:768) list:18
+5% (follower:760 / follow:144) list:13
 
-> Scottish forest troll and animator✍️
-Find me among the moss under a log in the woods
-
-Almost always SFW except for the odd life drawing
+> 放送作家・脚本家。テレビの放送作家でラジオのヘビーリスナーとして『ラジオブロス』『ラジオの残響 ヘビーリスナー聴く語り記』『日本懐かしラジオ大全』出版。【探している人】1978〜79年放送の東京八王子のミニＦＭ局「ＦＭ西東京」関係者＆リスナー KAWANO Masakazu
+ sumi23@muse.ocn.ne.jp
 
 ---
-45. ![](https://pbs.twimg.com/profile_images/1419842567903064066/jmNl3jCU_normal.jpg) SMA.$21
+24. ![](https://pbs.twimg.com/profile_images/1415866555150131202/TzSSfTsW_normal.jpg) 石田ケント（放送作家・YouTube作家）
 
-@[Only1Fatz](https://mobile.twitter.com/Only1Fatz)
+@[kentofthekent](https://mobile.twitter.com/kentofthekent)
 
-2% (follower:1134 / follow:562) list:2
+5% (follower:1171 / follow:232) list:15
 
-> #SMA Cofounder
-
----
-46. ![](https://pbs.twimg.com/profile_images/1342208932039651328/aVw4V9SH_normal.jpg) Terrence R. Smalls
-
-@[TerrenceSma11s](https://mobile.twitter.com/TerrenceSma11s)
-
-2% (follower:1957 / follow:956) list:37
-
-> Currently focused on impact investing and building brands ♻️🌍🛩 #NoDaysOff
+> 日テレ『スッキリ』『24時間テレビ』『ヒルナンデス 』『AKBINGO』『KEYABINGO』他48G冠番組。『中居正広の悲報館』『アソコの外国人』『動画甲子園』『加藤浩次の1億総コメ』など考案。TBS『さんま玉緒のあんたの夢〜』MX『バラいろダンディ』。『バッツネVICE』など。ゆとり世代。
 
 ---
-47. ![](https://pbs.twimg.com/profile_images/1018408710803206144/_E0O06q4_normal.jpg) mac fan acct
+25. ![](https://pbs.twimg.com/profile_images/1501720291852304387/quwMN7Dr_normal.jpg) 大平 尚志（放送作家）
 
-@[smaIIworIds](https://mobile.twitter.com/smaIIworIds)
+@[oohiratakashi](https://mobile.twitter.com/oohiratakashi)
 
-2% (follower:1450 / follow:489) list:12
+4% (follower:2147 / follow:528) list:52
 
-> inconsistent but loyal appreciation account. @domi_renee
-
----
-48. ![](https://pbs.twimg.com/profile_images/875434225096429569/_TUZ1Ghj_normal.jpg) Social Market Analytics, Inc. (SMA)
-
-@[SMA_alpha](https://mobile.twitter.com/SMA_alpha)
-
-1% (follower:1883 / follow:1380) list:92
-
-> Unstructured Financial Data Leader. SMA has built IP in 
-four major FinTech Areas: Sentiment NLP, Textual Parsing, Complex Topic Modeling, and Source Accuracy
+> カンフーと呼ばれています。 バラエティの放送作家という仕事をやっています。凡人道を極めたい所存です。ご依頼はDMまでお願いします。
 
 ---
-49. ![](https://pbs.twimg.com/profile_images/811701043440406528/isx_bL58_normal.jpg) SMA Events
+26. ![](https://pbs.twimg.com/profile_images/1055310734/a2_normal.jpg) 相澤昇＠放送作家
 
-@[SMA_Events](https://mobile.twitter.com/SMA_Events)
+@[a_aizawa](https://mobile.twitter.com/a_aizawa)
 
-1% (follower:3425 / follow:2058) list:53
+4% (follower:4099 / follow:951) list:89
 
-> The official Twitter for all SMA Conferences & Events.
-
----
-50. ![](https://pbs.twimg.com/profile_images/1098320744877096960/PYlxOve9_normal.jpg) Steve Mackin
-
-@[SMAMackin](https://mobile.twitter.com/SMAMackin)
-
-1% (follower:1663 / follow:1506) list:37
-
-> American in the UK. Esports/Gaming/Web3 industries. Previously @egx @reedpop @esl @iem. Aspiring writer. YouTuber at the link below :)
+> ゴッドタン/ジョブチューン/プレバト/初耳学/スピードワゴンの月曜TheNIGHT/あちこちオードリー/トークサバイバー/キングちゃん/ヌメロン/カルコロン/ヌケジャン/リンカーン/有吉の夏休み/YouTube/東京センターマイク（次回8/5）/ラーメン/Jリーグ/SF/愛知県知多市出身
 
 ---
-51. ![](https://pbs.twimg.com/profile_images/1164416033349750784/x6blRWxX_normal.jpg) Dr. Sarah Gualtieri
+27. ![](https://pbs.twimg.com/profile_images/1483017463998541826/7RbHgrTS_normal.jpg) たむらようこ(放送作家)「がんで死にかけて１２年、元気に働いてます」発売中
 
-@[SMAGualtieri](https://mobile.twitter.com/SMAGualtieri)
+@[tamurayouko1](https://mobile.twitter.com/tamurayouko1)
 
-1% (follower:681 / follow:517) list:7
+4% (follower:1593 / follow:356) list:16
 
-> Historian, Professor of Migration, Race, Arab American Studies, University of Southern California. Views my own. Profile available on https://t.co/snbJMS9Zu8
-
----
-52. ![](https://pbs.twimg.com/profile_images/1458956474927964164/u6-aD-QD_normal.jpg) 𝚎 𝚖 𝚒 °˖✧
-
-@[smaIIsub](https://mobile.twitter.com/smaIIsub)
-
-1% (follower:2722 / follow:2129) list:26
-
-> twenty (+) | she / her ! ♡︎ | minors dni ! | cashapp : $mingalinggg | star wars enthusiast
+> 福岡市出身／早稲女／（株）ベイビー＊プラネット社長／サラメシ／DAIGOも台所／シナぷしゅ／ザ・ノンフィクション／日本人妻／名医の太鼓判／世界遺産／情熱大陸／NHKスペシャル「人類誕生」／ミリオネア／慎吾ママ／中居の赤ちゃん預かります／おじゃる丸／サザエさん／祝女／Wの悲喜劇など／ねこ育て犬育て／毎日新聞コラム連載中
 
 ---
-53. ![](https://pbs.twimg.com/profile_images/1171668211361878017/vhqqOBXh_normal.jpg) SMA Arizona
+28. ![](https://pbs.twimg.com/profile_images/676201680/sedona_normal.jpg) 近藤祐次（放送作家）
 
-@[uofa_sma](https://mobile.twitter.com/uofa_sma)
+@[yuji_kondo](https://mobile.twitter.com/yuji_kondo)
 
-1% (follower:1045 / follow:582) list:21
+4% (follower:1880 / follow:465) list:73
 
-> Our goal is to introduce and expose our members to the sports industry at the University of Arizona. Celebrating 25 Years!
-
----
-54. ![](https://pbs.twimg.com/profile_images/1430727999259770888/6kcP45vW_normal.jpg) bella
-
-@[smaIIrat](https://mobile.twitter.com/smaIIrat)
-
-1% (follower:605 / follow:415) list:8
-
-> 
+> ★構成 アナザースカイ／ヒルナンデス／おしゃれイズム／おしゃべりアラモード／ZIP ★脚本『MUTEKING』『妖怪学園Y』『スナックワールド』『レイトンミステリー探偵社』ほか
 
 ---
-55. ![](https://pbs.twimg.com/profile_images/571102829725495296/Mp_ZsPD0_normal.jpeg) Sma
+29. ![](https://pbs.twimg.com/profile_images/1499004355714117641/kZs2ZfWx_normal.jpg) こち｜放送作家🎉HapPR／ハッピーアール
 
-@[smaliciouz](https://mobile.twitter.com/smaliciouz)
+@[Kochi74TV](https://mobile.twitter.com/Kochi74TV)
 
-0% (follower:245 / follow:349) list:6
+4% (follower:4256 / follow:954) list:43
 
-> Gamer, Designer, Visual Artist. Dms are open.
-Discord: Sma#1348 BM: sma@smaliciouz.com
-
----
-56. ![](https://pbs.twimg.com/profile_images/1550672369907286017/znOxYXG5_normal.jpg) Glaxton T. SMA Wolf🐺
-
-@[8stringandsushi](https://mobile.twitter.com/8stringandsushi)
-
-0% (follower:1346 / follow:1354) list:0
-
-> Beleaguered 49ers fan. Yankees fan by marriage. Still the personal chef of @allthingscivil. SMA Candidate.
+> 広報PR・ブランディングの情報を更新中📝ﾒﾃﾞｨｱの視点や思考を伝えています
 
 ---
-57. ![](https://pbs.twimg.com/profile_images/1397986046097297408/ZnFXlJK2_normal.jpg) St. Mary's Academy
+30. ![](https://pbs.twimg.com/profile_images/1032883371884478464/-A40lPmr_normal.jpg) カツオ／放送作家
 
-@[SMABelles](https://mobile.twitter.com/SMABelles)
+@[katsuoman8](https://mobile.twitter.com/katsuoman8)
 
-0% (follower:379 / follow:632) list:5
+3% (follower:6889 / follow:2073) list:86
 
-> St. Mary's Academy...Educating Young Women Since 1889 SMA Belles are Women of Distinction.
-
----
-58. ![](https://pbs.twimg.com/profile_images/756330913/rsz_copy_of_berry_doll_copy_normal.jpg) annabelle rose fndtn
-
-@[arf4sma](https://mobile.twitter.com/arf4sma)
-
-0% (follower:1116 / follow:1730) list:10
-
-> The Annabelle Rose Foundation for Spinal Muscular Atrophy is a charity  founded in Febuary 2010 dedicated to providing help & support to those affected by sma
+> ★企画書渋滞系の前のめり放送作家です！ 企画力はそこそこあると思ってます！  
+★現在の参加番組などの詳細プロフィールはhttps://t.co/4r7EIj1uod
+★仕事などのメール katsuoman8@gmail.com までお願いします
+★企画会議＆ディスカッションパートナーとして是非！
 
 ---
-59. ![](https://pbs.twimg.com/profile_images/1268607201469435904/1Ix_PkLZ_normal.jpg) Sarah Stanger
+31. ![](https://pbs.twimg.com/profile_images/479652982271651842/kb4Bd31n_normal.jpeg) タムケン（放送作家）
 
-@[DukesFightSMA](https://mobile.twitter.com/DukesFightSMA)
+@[sakkatamuken](https://mobile.twitter.com/sakkatamuken)
 
-0% (follower:117 / follow:196) list:0
+3% (follower:3542 / follow:912) list:110
 
-> Proud mom of Duke. SMA Advocate.
+> 放送作家やってます。 テレビ・ラジオ番組構成はもちろん、 イベントプロデュース、講師、講演、 その他、コンサルティング、プランニングの相談など お仕事依頼は・・・ tamukenwriter@yahoo.co.jpまで ※神奈月/ものまねユニット変人/風男塾/首都神話…etcライブ定期開催中
 
 ---
-60. ![](https://pbs.twimg.com/profile_images/1297573176/FB_profile_pic_normal.jpg) Maria Hennessey
+32. ![](https://pbs.twimg.com/profile_images/1008453405264642049/GmKn5_VP_normal.jpg) デーブ八坂(放送作家)
 
-@[SMAKmaria](https://mobile.twitter.com/SMAKmaria)
+@[DEBUyasaka1983](https://mobile.twitter.com/DEBUyasaka1983)
 
-0% (follower:1510 / follow:1585) list:145
+3% (follower:2190 / follow:722) list:45
 
-> Leader of the SMAK pack. PR & Marketing. Home = Crested Butte, CO 🌄 ❄️. When I'm not inside, I'm outside.
+> 大分県出身 39歳　趣味:日本史本を読むこと、復讐映画鑑賞　担当番組：博士ちゃん/所JAPAN/主治医が見つかる診療所/内村のツボる動画/ワルイコあつまれ/川島山内のマンガ沼/そだてれび/ゼロイチ/アンタウォッチマン/ミュズドゥももクロ/声優パーク/Tune/ローリーズファームYouTube..ete
+
+---
+33. ![](https://pbs.twimg.com/profile_images/1212695487800729600/7ysZJSuK_normal.jpg) 高尾龍一(放送作家)
+
+@[takao201177](https://mobile.twitter.com/takao201177)
+
+3% (follower:1124 / follow:296) list:9
+
+> 元ＮＴＴドコモの放送作家。婚活１００連敗の経験をネタに『タカオさんの婚活』（小学館「ビッグコミックスペリオール」）の原作を担当。Netflixでドラマやりたい！派手なサッカー映画作りたい！夢は朝ドラの脚本です！！
+
+---
+34. ![](https://pbs.twimg.com/profile_images/625690440071712768/4-q2sfe3_normal.jpg) 鈴木悠太(放送作家)
+
+@[yutahssk](https://mobile.twitter.com/yutahssk)
+
+3% (follower:685 / follow:223) list:6
+
+> ラジオの放送作家や動画制作など。お笑い出身です。
+
+---
+35. ![](https://pbs.twimg.com/profile_images/1551457351164915712/KCYKIAtC_normal.jpg) 立川ヒロナリ【放送作家】
+
+@[_kaito_1](https://mobile.twitter.com/_kaito_1)
+
+2% (follower:3861 / follow:1562) list:81
+
+> 放送作家。元々ハガキ職人でラジオネーム:豆山ビーンでした。ご依頼・連絡は👉mamebean12@gmail.com         最近読んだ本:三千円の使いかた
+
+---
+36. ![](https://pbs.twimg.com/profile_images/431869613307998208/BkmdQd5A_normal.png) 清山智之(放送作家)
+
+@[Nina___227](https://mobile.twitter.com/Nina___227)
+
+2% (follower:1127 / follow:412) list:14
+
+> 宮崎県出身／放送作家／36歳／99ann／サヨナラダンス
+【チャンスの時間・セブンルール・そこ曲がったら、櫻坂？・日向坂で会いましょう・なんて美だ！・ノイミー教えて・おはスタ・蛙亭イワクラ使節団】など。いつか宮崎で番組を（叶った！）。
+★★★蛙亭イワクラさんのYouTube『宮崎よかとこチャンネル』もぜひ★★★
+
+---
+37. ![](https://pbs.twimg.com/profile_images/1081479288669388800/IttLgJf1_normal.jpg) 平出尚人　放送作家
+
+@[notone7010](https://mobile.twitter.com/notone7010)
+
+2% (follower:494 / follow:207) list:6
+
+> 放送作家です。ヒルナンデス、世界まる見え、小5クイズ、オボエロ！、ワールドドキドキビデオ、カズレーザーと学ぶ、前人未笑…好きなもの/スニーカー（ダンクSBコレクター）、シュプリーム（初期収集中）、ビンテージTシャツ、競馬（最近復帰）
+
+---
+38. ![](https://pbs.twimg.com/profile_images/1139809444622028800/FmZ7pTP9_normal.jpg) 日本放送作家名鑑【公式】
+
+@[sakka_meikan](https://mobile.twitter.com/sakka_meikan)
+
+2% (follower:977 / follow:331) list:12
+
+> このサイトでは放送作家のインタビュー記事を掲載。 姉妹サイト「企画倉庫」→@kikakusouko ／管理人→＠kensakufukata
+
+---
+39. ![](https://pbs.twimg.com/profile_images/1516242141915545601/k_CX5xgH_normal.jpg) 放送作家/早稲田大学EXT講師 村松浩介
+
+@[kosukemur](https://mobile.twitter.com/kosukemur)
+
+2% (follower:378 / follow:177) list:8
+
+> 放送作家をしています。アメリカ・オレゴン州で卒業→アカペラで武道館ステージ→放送作家。アメリカ育ちの価値観や音楽ステージで培ったショーの技、テレビで学んだ情報の届け方をミックスした響く伝え方を模索中。弱いメンタルを改善するべく日々悪戦苦闘。メンタル改善や伝え方を中心に呟きます。
+
+---
+40. ![](https://pbs.twimg.com/profile_images/1316268193170612224/a1BXAxsh_normal.jpg) 中島 由有伽 (放送作家-保健師👧🏽)
+
+@[naka__u_](https://mobile.twitter.com/naka__u_)
+
+2% (follower:771 / follow:281) list:4
+
+> 石川県金沢市出身｜二水高校→東北大学→自治体保健師→放送作家｜ドラマアニメ格闘技が好き｜婚活サボり中｜SCHOOL OF LOCK! の新人職員N先生
+
+---
+41. ![](https://pbs.twimg.com/profile_images/1224879235573043205/jszk1eyh_normal.jpg) 一場麻美 / 放送作家
+
+@[Asami94010](https://mobile.twitter.com/Asami94010)
+
+2% (follower:1115 / follow:444) list:18
+
+> 構成作家。ラジオ、選曲、ナレーション、細々と会社とコンサル業もやってます。薬機法勉強中。音楽（R&B, Hip Hop）と旅行と赤酢のお鮨があれば幸せ。音楽、旅、雑談のサブアカ→@asami_94044 ALLY🏳️‍🌈
+
+---
+42. ![](https://pbs.twimg.com/profile_images/457520945628844032/GgDqiiDk_normal.jpeg) 斉藤 涼 (放送作家)
+
+@[ryo58a](https://mobile.twitter.com/ryo58a)
+
+2% (follower:343 / follow:166) list:1
+
+> テレビやYouTubeの放送作家。 企画・構成・撮影・編集。千葉ロッテマリーンズを応援したりもします。埼玉県蕨市出身。 お仕事のご依頼等→rs58s7uk@gmail.com     DMでも承ります
+
+---
+43. ![](https://pbs.twimg.com/profile_images/1401720025950523399/6aM9XSRc_normal.jpg) 前田政二 （放送作家・演芸作家）
+
+@[seiji8888](https://mobile.twitter.com/seiji8888)
+
+1% (follower:7496 / follow:4081) list:154
+
+> ◆吉本NSC1期生◆銀次・政二というﾔﾝｷｰ漫才してました◆『ひょうきん族』で何人ﾄﾘｵで♪ﾗﾌﾞﾕｰ貧乏歌ってました◆ABC漫才新人賞◆今宮戎漫才大賞◆素人参加番組、多数優勝◆Mｰ1ｸﾞﾗﾝﾌﾟﾘｽﾀｯﾌ・NSC講師・無限大ﾗｲﾌﾞ◆著書『ﾉｰﾌﾞﾗﾝﾄﾞ（1期生の話）』『深夜ﾗｼﾞｵとひょうきん族と』◆舞台脚本演出
+
+---
+44. ![](https://pbs.twimg.com/profile_images/1313468457199915008/789dgOBh_normal.jpg) 辻井宏仁(放送作家）🇺🇦
+
+@[hironoritsujii](https://mobile.twitter.com/hironoritsujii)
+
+1% (follower:1012 / follow:615) list:32
+
+> 父/夫/放送作家/脚本家/創作落語/CMコピー•企画/PR企画/ 男子ごはん/ひるおび！/ありえへん∞世界/土曜名馬座/遊戯配信/ドラマ タチ喰い!/俺たちの長渕剛/ほか YouTube制作企画運営、詳細プロフはnoteにて。お仕事の依頼ありましたらDMお願いします‼️
+
+---
+45. ![](https://pbs.twimg.com/profile_images/3153026764/9a911c00d1800aba3d2122e8900f2f36_normal.jpeg) 加藤ゆうた（放送作家）
+
+@[millhouseyuta](https://mobile.twitter.com/millhouseyuta)
+
+1% (follower:1035 / follow:630) list:6
+
+> 実家がラーメン屋の放送作家です🍜二郎でバイト経験あり。「ありえへん∞世界」「じっくり聞いタロウ」「トコロさんのそこんトコロ」「いいねの森」「ナゼそこ？」「伊集院光とラジオと」「隅田川花火大会」「フルタチさん」「オールスター感謝祭」等に参加してきました▼
+
+---
+46. ![](https://pbs.twimg.com/profile_images/1133672319115599872/hCrmbcSG_normal.png) 佐藤さん：エンタメライター/記者/放送作家/編集者【公式】
+
+@[aoipe2011](https://mobile.twitter.com/aoipe2011)
+
+1% (follower:1018 / follow:591) list:5
+
+> エンタメライター 。記者。放送作家。編集者。エンタメ、ポップカルチャー、メディアアート、東京のサブカルなど。番組制作協力。いろんな所で記事や評論、インタビューなど掲載。USC/NYU🇺🇸🗽 Life is Entertainment‼️生きてる間は人生を楽しみましょう👍限りある残りの人生を前向きに生きる。
+
+---
+47. ![](https://pbs.twimg.com/profile_images/1128994271539810304/k_yulALz_normal.jpg) 売れてないけど食えてる放送作家
+
+@[hososakkadesu](https://mobile.twitter.com/hososakkadesu)
+
+1% (follower:545 / follow:466) list:6
+
+> その名の通りの人です。 放送作家歴１３年目の３７歳。 売れていない、中の下くらいの放送作家のリアルを綴ります。 ギャラ事情などは→https://t.co/Pygke0GecK お問い合わせはhososakkadesu@gmail.comまで
+
+---
+48. ![](https://pbs.twimg.com/profile_images/1396076831422357507/4nKBDCvd_normal.jpg) オーガネク（放送作家＆YouTubeプロデューサー）
+
+@[ganeganeku](https://mobile.twitter.com/ganeganeku)
+
+1% (follower:858 / follow:743) list:5
+
+> 🐠沖縄出身📺ケンミンSHOW・ほほおちゴハン！・お願いランキン・フジボクシング・マスターズ・ももいろ歌合戦、玉手箱など🖥うさたにパイセン・ハート様🏖制作会社→作家事務所→コロコロビーチ起業👉番組やYouTube、作ってるコンテンツについてつぶやきまーす！ヘッポコなんで優しめで🙏問合せ📩
+
+---
+49. ![](https://pbs.twimg.com/profile_images/989885955338190849/_ckVpuIq_normal.jpg) さいとうかおり@放送作家
+
+@[kaooorii108](https://mobile.twitter.com/kaooorii108)
+
+1% (follower:983 / follow:878) list:12
+
+> 夢だった放送作家になりました♪ 現在は放送作家、イベントMC、ライブMC、ライター、記者としても活動中。お仕事のことを呟いています！プライベートアカウントは@kaooorii です♪
+
+---
+50. ![](https://pbs.twimg.com/profile_images/1435251543352098822/Hc6QC7yD_normal.jpg) 細川拓朗(ホソカワ・ザ・ムービー/放送作家)
+
+@[hosokawa_movie](https://mobile.twitter.com/hosokawa_movie)
+
+1% (follower:1112 / follow:573) list:9
+
+> ワンシチュエーションコメディ作りたい ！【TV】#お笑いの日 #キングオブコントの会 #ザ・ベストワン #あらびき団 #ソウドリ #東京03inUNDERDOGS #タクうま 【YouTube】#コークサマーチャレンジ など … https://t.co/UNiG3wjxxz
+
+---
+51. ![](https://pbs.twimg.com/profile_images/1513811425969332227/xiAILbIQ_normal.jpg) 梶本長之 / 放送作家
+
+@[kajinaga](https://mobile.twitter.com/kajinaga)
+
+1% (follower:461 / follow:253) list:5
+
+> 構成作家として細々と活動しています。好きなものは野球とゴルフと麻雀と競馬とFPSゲームとキャッチボールです。猫の動画を見るのも好きです。色んなものに刺激を受けて頑張ります。担当番組はURL先です。YouTubeのお手伝い:ケビンス、ママタルト、令和ロマン
+
+---
+52. ![](https://pbs.twimg.com/profile_images/1467762529648914434/KJ_9UP2g_normal.jpg) 安藤凜人 / 放送作家
+
+@[rinrinrinrinto](https://mobile.twitter.com/rinrinrinrinto)
+
+1% (follower:335 / follow:329) list:1
+
+> 25歳放送作家 プロフィールhttps://t.co/QN7NsI70nF プロレス,戦国時代,MARVEL,ハロプロ,ポケモンとか好き ネタ出し、企画書作成などお仕事のご相談などお気軽にDM又はメールくださいませ ご依頼📩: rinto.ando0113@gmail.com
+
+---
+53. ![](https://pbs.twimg.com/profile_images/547929898610724864/fUaNhTRM_normal.jpeg) おーさくまり（放送作家）
+
+@[OsakuMari](https://mobile.twitter.com/OsakuMari)
+
+1% (follower:626 / follow:346) list:4
+
+> テレビの番組作ってます。硬派なビジネス番組から世界経済、深夜の音楽番組、トークにグルメ、旅番組、お料理番組も。毎日が素敵な出逢いに溢れてます。あたまがもじゃもじゃです。好きな言葉は「乾杯♪」
+
+---
+54. ![](https://pbs.twimg.com/profile_images/1459864375909830656/BmnXCOA4_normal.jpg) 岡田 麻奈　@大学生で放送作家
+
+@[nemutai__inu](https://mobile.twitter.com/nemutai__inu)
+
+1% (follower:173 / follow:168) list:1
+
+> 放送作家(22)／大学3年／太田プロ19期／野球、ミスチル、ミュージカル、コナン、お酒が好き／企画書、台本書きます／テレビの仕事がしたい
+
+---
+55. ![](https://pbs.twimg.com/profile_images/1453339202536443921/nrb5GEiW_normal.jpg) 🦥🦥🦥🦥🦥📮
+
+@[1999aaaa1999](https://mobile.twitter.com/1999aaaa1999)
+
+0% (follower:998 / follow:1241) list:19
+
+> まだ先は長い。 難波「千とせ」は「肉吸い」より「豚吸い」！😆
+
+---
+56. ![](https://pbs.twimg.com/profile_images/928397206146527233/OLrL0L8l_normal.jpg) 乾友子・放送作家
+
+@[inuimokomoko](https://mobile.twitter.com/inuimokomoko)
+
+0% (follower:275 / follow:409) list:8
+
+> 放送作家・構成作家の乾友子です。お仕事の告知を大々的には呟かないけど、テレビ番組やYouTube・ネット番組、企業公式動画、イベントなどの台本や構成を複数やっております。作家歴は10年以上。アニメや特撮などが大好きなオタク作家。フリーランスでやってます。絵描き歌やレシピも作るよ♪趣味垢は別。
+
+---
+57. ![](https://pbs.twimg.com/profile_images/1206060424883404802/Dvb57Qnz_normal.jpg) ナスエリカ_編集者・放送作家
+
+@[KaoroMoroz](https://mobile.twitter.com/KaoroMoroz)
+
+0% (follower:590 / follow:2363) list:3
+
+> studio KAORO ／フリーランスの #放送作家  #ライター #脚本家 #プロデューサー をしてます／ペンネームがたくさんあります／#プラプロ 原案／脚本・記事執筆や新規企画のお仕事のご依頼はDMにてお願いします。 フォロー・リツイート・リプはご自由にどうぞ！ （時々スタッフが運営しています）
+
+---
+58. ![](https://pbs.twimg.com/profile_images/1541462195552538625/-PLnDvpP_normal.jpg) 【放送作家】フジサワタロウ
+
+@[MC_taropanda](https://mobile.twitter.com/MC_taropanda)
+
+0% (follower:478 / follow:1245) list:2
+
+> 秋田が生んだ👹日本一のポンコツ放送作家/日芸放送/スポーツ🏃‍♂️バラエティ😂イベント構成🎭企業・タレントYoutubeチャンネル🎙ローカル局コンテンツなど担当/リサーチ&構成&撮影編集までお手伝いします/現場大好き作家/お仕事のご依頼はDMまでお願いします🤲
+
+---
+59. ![](https://pbs.twimg.com/profile_images/1477142338896281603/vsiDzZhs_normal.jpg) 古島慎太郎　放送作家
+
+@[_furush1_](https://mobile.twitter.com/_furush1_)
+
+0% (follower:132 / follow:322) list:2
+
+> 放送作家（24）【YouTube】大西ライオンのゴル配ないさー 【ラジオ】今夜はLuckyNightさやかマンデー / ゴルフ 競馬 野球 音楽（ベース） ゲーム/ 💌→ furush1.w@gmail.com
+
+---
+60. ![](https://pbs.twimg.com/profile_images/1542471252400414720/7JatIp_p_normal.jpg) 大澤悠平@放送作家
+
+@[osawa554](https://mobile.twitter.com/osawa554)
+
+0% (follower:502 / follow:604) list:2
+
+> 都合よく放送作家と名乗ったり、クイズ作家と名乗ったりしています。テレビが好きです。クイズ番組が好きです。宮崎出身です。YouTube才木玲佳のクイズ女王への道https://t.co/x6o4BCk9Uc
 
 ---
